[gd_scene load_steps=4 format=3 uid="uid://b5m7n2lap4tsx"]

[ext_resource type="Script" path="res://scripts/ui/ResourceInventoryPanel.gd" id="1_inventory"]
[ext_resource type="Theme" uid="uid://bh3pao1yls74n" path="res://resources/themes/main_theme.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.039, 0.059, 0.118, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.843, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(1, 0.843, 0, 0.4)
shadow_size = 6

[node name="ResourceInventoryPanel" type="Panel"]
visible = false
custom_minimum_size = Vector2(800, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme = ExtResource("2_theme")
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_inventory")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "RESOURCE INVENTORY"

[node name="Spacer" type="Control" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CollectedLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "0/100"

[node name="CloseButton" type="Button" parent="VBox/Header"]
layout_mode = 2
text = "Ã—"
flat = true

[node name="Toolbar" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SearchBox" type="LineEdit" parent="VBox/Toolbar"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Search resources..."

[node name="FilterDropdown" type="OptionButton" parent="VBox/Toolbar"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "All Tiers"
popup/item_0/id = 0
popup/item_1/text = "Common (0-2)"
popup/item_1/id = 1
popup/item_2/text = "Uncommon (3-5)"
popup/item_2/id = 2
popup/item_3/text = "Rare+ (6-9)"
popup/item_3/id = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="TierSectionsContainer" type="VBoxContainer" parent="VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

